--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
-    "next": "13.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-outside-click-handler": "^1.3.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
